<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    android:fillViewport="true">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/dark_green"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/main_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:src="@drawable/ic_treadmill"
            app:layout_constraintBottom_toBottomOf="@id/toolbar"
            app:layout_constraintLeft_toLeftOf="@id/toolbar"
            app:layout_constraintTop_toTopOf="@id/toolbar"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/appTittle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/robotobold"
            android:text="@string/calculador_imc"
            android:textColor="@color/white"
            android:textSize="20dp"
            app:layout_constraintBottom_toBottomOf="@id/toolbar"
            app:layout_constraintLeft_toRightOf="@id/main_icon"
            app:layout_constraintTop_toTopOf="@id/toolbar" />

        <Button
            android:id="@+id/insertActivity"
            android:layout_width="154dp"
            android:layout_height="64dp"
            android:layout_marginTop="36dp"
            android:backgroundTint="@color/dark_green"
            android:padding="5dp"
            android:text="@string/activityButtonText"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18dp"
            app:layout_constraintStart_toStartOf="@+id/table"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <View
            android:id="@+id/imcView"
            android:layout_width="193dp"
            android:layout_height="64dp"
            android:background="@drawable/imc_label_background"
            app:layout_constraintEnd_toEndOf="@+id/table"
            app:layout_constraintTop_toTopOf="@+id/insertActivity" />

        <TextView
            android:id="@+id/imcLabel"
            android:layout_width="81dp"
            android:layout_height="62dp"
            android:layout_marginStart="12dp"
            android:elevation="1dp"
            android:fontFamily="@font/robotobold"
            android:gravity="center"
            android:text="@string/ImcLabel"
            android:textColor="@color/grey"
            android:textSize="30dp"
            app:layout_constraintBottom_toBottomOf="@+id/imcView"
            app:layout_constraintStart_toStartOf="@+id/imcView"
            app:layout_constraintTop_toTopOf="@+id/imcView"
            app:layout_constraintVertical_bias="0.333" />

        <TextView
            android:id="@+id/imcValue"
            android:layout_width="81dp"
            android:layout_height="62dp"
            android:layout_marginEnd="16dp"
            android:elevation="1dp"
            android:fontFamily="@font/robotobold"
            android:gravity="center"
            android:text="@string/imcValue"
            android:textColor="@color/grey"
            android:textSize="30dp"
            app:layout_constraintEnd_toEndOf="@+id/imcView"
            app:layout_constraintTop_toTopOf="@+id/imcLabel" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/table"
            android:layout_width="367dp"
            android:layout_height="381dp"
            android:layout_marginTop="28dp"
            android:background="@drawable/table_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imcView">

            <TextView
                android:id="@+id/tableHeader1"
                android:layout_width="160dp"
                android:layout_height="50dp"
                android:fontFamily="@font/robotobold"
                android:gravity="center"
                android:text="@string/imc"
                android:textColor="@color/black"
                android:textSize="17dp"
                app:layout_constraintBottom_toTopOf="@+id/intervaloMagreza"
                app:layout_constraintEnd_toStartOf="@+id/tableHeader2"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tableHeader2"
                android:layout_width="160dp"
                android:layout_height="50dp"
                android:fontFamily="@font/robotobold"
                android:gravity="center"
                android:text="@string/classificacao"
                android:textColor="@color/black"
                android:textSize="17dp"
                app:layout_constraintBottom_toTopOf="@+id/magreza"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/tableHeader1"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/intervaloMagreza"
                android:layout_width="182dp"
                android:layout_height="50dp"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:text="@string/imc1"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/intervaloNormal"
                app:layout_constraintEnd_toStartOf="@+id/magreza"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tableHeader1" />

            <TextView
                android:id="@+id/magreza"
                android:layout_width="182dp"
                android:layout_height="50dp"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:text="@string/cla1"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/intervaloMagreza"
                app:layout_constraintTop_toBottomOf="@+id/tableHeader2" />

            <TextView
                android:id="@+id/intervaloNormal"
                android:layout_width="182dp"
                android:layout_height="50dp"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:text="@string/imc2"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/intervaloSobrepeso"
                app:layout_constraintEnd_toStartOf="@+id/normal"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/intervaloMagreza" />

            <TextView
                android:id="@+id/normal"
                android:layout_width="182dp"
                android:layout_height="50dp"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:text="@string/cla2"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/sobrepeso"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/intervaloNormal"
                app:layout_constraintTop_toBottomOf="@+id/magreza" />

            <TextView
                android:id="@+id/intervaloSobrepeso"
                android:layout_width="182dp"
                android:layout_height="50dp"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:text="@string/imc3"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/intervaloObesidade"
                app:layout_constraintEnd_toStartOf="@+id/sobrepeso"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/intervaloNormal" />

            <TextView
                android:id="@+id/sobrepeso"
                android:layout_width="182dp"
                android:layout_height="50dp"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:text="@string/cla3"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/obesidade"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/intervaloSobrepeso"
                app:layout_constraintTop_toBottomOf="@+id/normal" />

            <TextView
                android:id="@+id/intervaloObesidade"
                android:layout_width="182dp"
                android:layout_height="50dp"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:text="@string/imc4"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/intervaloObesidadeGrave"
                app:layout_constraintEnd_toStartOf="@+id/obesidade"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/intervaloSobrepeso" />

            <TextView
                android:id="@+id/obesidade"
                android:layout_width="182dp"
                android:layout_height="50dp"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:text="@string/cla4"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/obesidadeGrave"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/intervaloObesidade"
                app:layout_constraintTop_toBottomOf="@+id/sobrepeso" />

            <TextView
                android:id="@+id/intervaloObesidadeGrave"
                android:layout_width="182dp"
                android:layout_height="50dp"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:text="@string/imc5"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/obesidadeGrave"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/intervaloObesidade" />

            <TextView
                android:id="@+id/obesidadeGrave"
                android:layout_width="182dp"
                android:layout_height="50dp"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:text="@string/cla5"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/intervaloObesidadeGrave"
                app:layout_constraintTop_toBottomOf="@+id/obesidade" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <View
            android:id="@+id/percentView"
            android:layout_width="368dp"
            android:layout_height="189dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/table_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/table" />

        <TextView
            android:id="@+id/text1"
            android:layout_width="198dp"
            android:layout_height="42dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/robotobold"
            android:gravity="center"
            android:text="@string/percentText1"
            android:textColor="@color/grey"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="@+id/percentView"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="@+id/percentView"
            app:layout_constraintTop_toTopOf="@+id/percentView" />

        <TextView
            android:id="@+id/imcPercent"
            android:layout_width="165dp"
            android:layout_height="43dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/robotobold"
            android:gravity="center"
            android:text="@string/percenteValue"
            android:textColor="@color/grey"
            android:textSize="30dp"
            app:layout_constraintEnd_toEndOf="@+id/percentView"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="@+id/percentView"
            app:layout_constraintTop_toBottomOf="@+id/text1" />

        <TextView
            android:id="@+id/percentText"
            android:layout_width="251dp"
            android:layout_height="57dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/robotobold"
            android:gravity="center"
            android:text="@string/percentText2"
            android:textColor="@color/grey"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="@+id/percentView"
            app:layout_constraintHorizontal_bias="0.507"
            app:layout_constraintStart_toStartOf="@+id/percentView"
            app:layout_constraintTop_toBottomOf="@+id/imcPercent" />

        <Button
            android:id="@+id/createNote"
            android:layout_width="160dp"
            android:layout_height="85dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="40dp"
            android:backgroundTint="@color/dark_green"
            android:text="@string/noteButtonText"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="19dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/percentView"
            app:layout_constraintTop_toBottomOf="@+id/percentView"
            app:layout_constraintVertical_bias="0.021" />

        <Button
            android:id="@+id/about"
            android:layout_width="160dp"
            android:layout_height="85dp"
            android:layout_marginStart="44dp"
            android:backgroundTint="@color/dark_green"
            android:text="@string/aboutButtonText"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="19dp"
            app:layout_constraintEnd_toEndOf="@+id/percentView"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/createNote"
            app:layout_constraintTop_toTopOf="@+id/createNote" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>