<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InsertData"
    android:background="@drawable/app_background">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_green"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/main_icon"
        android:layout_width="44dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:src="@drawable/ic_treadmill"
        app:layout_constraintBottom_toBottomOf="@id/toolbar"
        app:layout_constraintLeft_toLeftOf="@id/toolbar"
        app:layout_constraintTop_toTopOf="@id/toolbar"
        app:tint="@color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:fontFamily="@font/robotobold"
        android:text="@string/calculador_imc"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="@id/toolbar"
        app:layout_constraintLeft_toRightOf="@id/main_icon"
        app:layout_constraintTop_toTopOf="@id/toolbar" />

    <TextView
        android:id="@+id/tittle"
        android:layout_width="329dp"
        android:layout_height="82dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/robotobold"
        android:gravity="center"
        android:text="@string/insertTittle"
        android:textColor="@color/grey"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <Button
        android:id="@+id/insertButton"
        android:layout_width="118dp"
        android:layout_height="52dp"
        android:layout_marginTop="44dp"
        android:backgroundTint="@color/dark_green"
        android:text="@string/submitButton"
        android:textAllCaps="false"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sex" />

    <Spinner
        android:id="@+id/sex"
        android:layout_width="170dp"
        android:layout_height="46dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="64dp"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/mass" />

    <EditText
        android:id="@+id/mass"
        android:layout_width="170dp"
        android:layout_height="46dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="56dp"
        android:ems="10"
        android:hint="Exemplo : 68.5"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/height" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="72dp"
        android:layout_height="46dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="56dp"
        android:fontFamily="@font/robotobold"
        android:gravity="center|start"
        android:text="@string/peso"
        android:textColor="@color/grey"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="72dp"
        android:layout_height="46dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/robotobold"
        android:gravity="center|start"
        android:text="@string/sexo"
        android:textColor="@color/grey"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/height"
        android:layout_width="170dp"
        android:layout_height="46dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="28dp"
        android:hint="Exemplo : 1.70"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/tittle" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="72dp"
        android:layout_height="46dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/robotobold"
        android:gravity="center|start"
        android:text="@string/altura"
        android:textColor="@color/grey"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tittle" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="34dp"
        android:layout_height="24dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/robotobold"
        android:gravity="center"
        android:text="Kg"
        android:textColor="@color/grey"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/mass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.255"
        app:layout_constraintStart_toEndOf="@+id/mass" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="34dp"
        android:layout_height="24dp"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/robotobold"
        android:gravity="center"
        android:text="m"
        android:textColor="@color/grey"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.255"
        app:layout_constraintStart_toEndOf="@+id/height" />


</androidx.constraintlayout.widget.ConstraintLayout>